[package]
name = "ch32v00x-hal"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>", "Noxim <aaro.peramaa@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the CH32V00x family of microcontrollers"
keywords = ["risc-v", "wch", "ch32", "hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ch32-rs/ch32v00x-hal"
documentation = "https://docs.rs/ch32v00x-hal"
readme = "README.md"

[dependencies]
ch32v0 = { version = "0.1.6", features = ["ch32v003", "critical-section"], path = "../ch32-rs-nightlies/ch32v0" }
ch32v-rt = "0.0.2"
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
qingke = "0.1.3"

nb = "1.0"
fugit = "0.3.6"
fugit-timer = "0.1.3"

embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-alpha = { version = "=1.0.0-rc.1", package = "embedded-hal" }

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
default = ["ch32v003"]
device-selected = []

ch32v003 = ["device-selected"]

ch32v003f4p6 = ["device-selected"] # TSSOP20, 18 GPIO
ch32v003f4u6 = ["device-selected"] # QFN20, 18 GPIO
ch32v003a4M6 = ["device-selected"] # SOP16, 14 GPIO
ch32v003j4m6 = ["device-selected"] # SOP8, 6 GPIO

[dev-dependencies]
panic-halt = "0.2.0"
ssd1306 = "0.8"

# [[example]]
# name = "blinky"
# # change this to the device you want to run the example on
# required-features = ["device-selected"]

[profile.release]
strip = false
lto = true
opt-level = "z" # Optimize for size.

[patch.crates-io]
# TODO: Merge this to riscv-rt
riscv-rt = { git = "https://github.com/9names/riscv-rt", branch = "rv32e" }
