[package]
name = "ch32v00x-hal"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>", "Noxim <aaro.peramaa@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the CH32V00x family of microcontrollers"
keywords = ["risc-v", "wch", "ch32", "hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ch32-rs/ch32v00x-hal"
documentation = "https://docs.rs/ch32v00x-hal"
readme = "README.md"

[dependencies]
ch32v0 = { version = "0.1.7", features = ["critical-section"] }
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
qingke = "0.1.7"

nb = "1.0"
fugit = "0.3.6"
fugit-timer = "0.1.3"

embedded-hal-02 = { version = "0.2.7", package = "embedded-hal", features = [
    "unproven",
] }
embedded-hal-1 = { version = "=1.0.0-rc.1", package = "embedded-hal" }

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
default = ["ch32v003", "rt"]
device-selected = []
rt = ["ch32v0/rt"]

ch32v003 = ["ch32v0/ch32v003", "device-selected"]

ch32v003f4p6 = ["ch32v003"] # TSSOP20, 18 GPIO
ch32v003f4u6 = ["ch32v003"] # QFN20, 18 GPIO
ch32v003a4m6 = ["ch32v003"] # SOP16, 14 GPIO
ch32v003j4m6 = ["ch32v003"] # SOP8, 6 GPIO

[dev-dependencies]
panic-halt = "0.2.0"
qingke-rt = "0.1.7"
ssd1306 = "0.8"

[profile.release]
strip = false
lto = true
opt-level = "z" # Optimize for size.

[[example]]
name = "blinky"
required-features = ["ch32v003", "rt"]

[[example]]
name = "debug"
required-features = ["ch32v003", "rt"]

[[example]]
name = "i2c_ssd1306"
required-features = ["ch32v003", "rt"]

[[example]]
name = "serial"
required-features = ["ch32v003", "rt"]
